# Speech-MASSIVE

./: .flake8  .gitlab-ci.yml  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt
src/speech_massive/examples/hparams/: e2e_slu_fewshot_fr.yaml  e2e_slu_zeroshot_fr.yaml
src/speech_massive/examples/scripts/: massive_eval.py  s3prl_slot_eval.py
src/speech_massive/examples/speech/: run_slu_whisper.py  trainer_seq2seq_whisper_slu.py
